test/good/lambdas/lambda15.px

func call(f: Int->Bool, n: Int): Bool def
    return f(n)

print call(_ in [3], 3)
print call(0 not in {_}, 3)
