test/bad/generators/print01.px

func f(): (Int->Bool)... def
    skip

print f
